kubernetes-network-policy-isolation/exports/development/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"advanced-access-policy","namespace":"development"},"spec":{"ingress":[{"from":[{"podSelector":{"matchExpressions":[{"key":"tier","operator":"In","values":["frontend"]}],"matchLabels":{"access-level":"standard"}}}],"ports":[{"port":3306,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"access-level":"restricted"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-22T03:24:44Z"
    generation: 1
    name: advanced-access-policy
    namespace: development
    resourceVersion: "2280"
    uid: 4eb226aa-0792-45e9-8dd5-7a13f8419065
  spec:
    ingress:
    - from:
      - podSelector:
          matchExpressions:
          - key: tier
            operator: In
            values:
            - frontend
          matchLabels:
            access-level: standard
      ports:
      - port: 3306
        protocol: TCP
    podSelector:
      matchLabels:
        access-level: restricted
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-client-to-web","namespace":"development"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"client","tier":"testing"}}}],"ports":[{"port":80,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"web","tier":"frontend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-22T03:22:18Z"
    generation: 1
    name: allow-client-to-web
    namespace: development
    resourceVersion: "1970"
    uid: dc543cd8-e231-45f1-bb1c-f0647f39a6da
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: client
            tier: testing
      ports:
      - port: 80
        protocol: TCP
    podSelector:
      matchLabels:
        app: web
        tier: frontend
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-web-to-db","namespace":"development"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"web","tier":"frontend"}}}],"ports":[{"port":3306,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"db","tier":"backend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-22T03:22:18Z"
    generation: 1
    name: allow-web-to-db
    namespace: development
    resourceVersion: "1971"
    uid: bcd20bee-a565-4386-9d10-51c1842aeb90
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: web
            tier: frontend
      ports:
      - port: 3306
        protocol: TCP
    podSelector:
      matchLabels:
        app: db
        tier: backend
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"development"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-22T03:21:29Z"
    generation: 1
    name: default-deny-ingress
    namespace: development
    resourceVersion: "1854"
    uid: 36092942-5e58-4982-9477-0ad1af407b1d
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"web-egress-policy","namespace":"development"},"spec":{"egress":[{"ports":[{"port":3306,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"db","tier":"backend"}}}]},{"ports":[{"port":3306,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"environment":"prod"}},"podSelector":{"matchLabels":{"app":"db","tier":"backend"}}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":5 [...]
    creationTimestamp: "2026-09-22T03:23:54Z"
    generation: 1
    name: web-egress-policy
    namespace: development
    resourceVersion: "2172"
    uid: 2fcd7f7d-6483-494e-979a-5a550861a995
  spec:
    egress:
    - ports:
      - port: 3306
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app: db
            tier: backend
    - ports:
      - port: 3306
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            environment: prod
        podSelector:
          matchLabels:
            app: db
            tier: backend
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        app: web
        tier: frontend
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
